--- a/.github/workflows/gosi.yml
+++ b/.github/workflows/gosi.yml
@@ -51,6 +51,7 @@ jobs:
       run: |
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
+        git pull --rebase origin main
         git add gosi_state.json
         git diff --quiet && git diff --staged --quiet || git commit -m "Update gosi_state.json [skip ci]"
         git push
